style.css
@font-face {
    font-family: "Norse Bold";
    src: url(assets/Norse-Bold.otf)
}

* {
    padding-left: 0;
}

:root {
    max-width: 100%;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    height: 100vh;
}

.main-container {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    width: 100vh;
    height: 71vh;
    box-shadow: 0 0 10px 10px #dedede;
}

.splash-container {
    background-image: url(assets/halie-west-25xggax4bSA-unsplash.jpg);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex: 1.25;
    background-size: cover;
}

.blur-shadow {
    color: white;
    text-shadow: black 3px 3px 5px;
}

.logo-container {
    background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo-elements {
    opacity: 1 !important;
}

.logo-container h1 {
    color: white;
    font-family: "Norse Bold";
    display: inline-block;
    font-size: 4em;
}

.logo-container img {
    display: inline-block;
    height: 6em;
}

.content-container {
    background-color: #efefef;
    flex: 1.75;
    display: flex;
    gap: 2em;
    flex-direction: column;
    justify-content: center;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.content-container h2 {
    padding-left: 2em;
    padding-right: 3em;
    font-size: 1.25em;
}

.content-container p {
    padding-left: 3em;
    padding-right: 3em;
}

.content-container a {
    color: #596D48;
    font-weight: bold;
}

.form-container {
    background-color: white;
    border: 2px lightgray;
    border-style: solid none;
    box-shadow: 0 0  3px #dedede;
    padding-top: 1em;
    padding-bottom: 1em;
    padding-left: 2em;
    padding-right: 2em;
}

.form-container h2 {
    padding-left: 0.5em;
}

fieldset {
    border: 0;
    margin: 0;
    padding-left: 0.75em;
    display: flex;
    justify-content: space-around;
}

.form-cell {
    display: flex;
    flex-direction: column;
}

.form-cell label {
    font-size: 0.7rem;
    font-weight: 500;
    text-transform: uppercase;
}

.form-cell input {
    border: 1px solid #596D48;
    border-radius: 4px;
    padding: 7px;
    font-size: 14px;
}

